# identity-manager

./: .travis.yml  0.5aea6b20e8ee350b6ea5.bundle.js  CHANGELOG.md  README.md  asset-manifest.json  conductor-config.toml  config.nix  iframe.html  index.html  main.02f79ab3a9deb5572063.bundle.js  main.02f79ab3a9deb5572063.bundle.js.map  main.1b3c278a567bdc953e09.bundle.js  my-conductor-config.toml  package.json  precache-manifest.61e928c4b45910dc65ef17a708fe4c8c.js  runtime~main.02f79ab3a9deb5572063.bundle.js  runtime~main.02f79ab3a9deb5572063.bundle.js.map  runtime~main.7d54a70f2b2ad08f7596.bundle.js  service-worker.js  vendors~main.02f79ab3a9deb5572063.bundle.js  vendors~main.02f79ab3a9deb5572063.bundle.js.map  vendors~main.9b3619f77c58a2368e78.bundle.js
dna-src/: app.json
dna-src/test/: config.js  index.js
dna-src/test/agent/: personas.js  profiles.js
dna-src/utils/: Cargo.toml
dna-src/zomes/personas/code/: .hcbuild  Cargo.toml
dna-src/zomes/personas/code/src/: lib.rs
dna-src/zomes/personas/code/src/persona/: handlers.rs  mod.rs
ui-automation/: package-lock.json  package.json
ui-automation/cypress/integration/: persona.js
ui-src/: package-lock.json  package.json  tsconfig.json
ui-src/.storybook/: addons.js  config.js
ui-src/identity-manager/: asset-manifest.json  index.html  precache-manifest.11645971b70f5cf96601bfbe31fa0c55.js  service-worker.js
ui-src/public/: index.html
ui-src/src/: nav.jsx  nav.tsx  react-app-env.d.ts  root.tsx  store.ts  withRoot.tsx
ui-src/src/_welcome/: welcome.md  welcome.stories.tsx
(+86 files in other folders)
